# Calendario

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requeriments.txt
calendario/: settings.py  urls.py
core/: admin.py  models.py
core/migrations/: 0001_initial.py
