[tool.poetry]
name = "calendario"
version = "0.1.0"
description = ""
authors = ["Nicholas Estrada <nicholas26cervatti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "whitenoise"
whitenoise = "^5.3.0"
Django = "^3.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
